--- a/resources/sass/darkMode.scss
+++ b/resources/sass/darkMode.scss
@@ -9,6 +9,7 @@
     .dropdown-menu,
     .index-post-card,
     .profile-post-card,
+    .post-card,
     .cookie-consent {
         background-color: $dark-mode-dark-gray !important;
     }
@@ -39,7 +40,6 @@
     h6,
     .h6,
     p,
-    span,
     label,
     input,
     textarea,
@@ -88,5 +88,11 @@
     hr,
     .hr {
         border-top: 1px solid rgba(255, 255, 255, 0.1) !important;
+    }
+
+    .alert-success {
+        border: none !important;
+        background-color: #347235 !important;
+        color: white !important;
     }
 }
